--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <meta name="description" content="Learn how small businesses can grow faster using online promotion methods like SEO, social media, content marketing, video marketing, and paid ads.">
 <meta name="robots" content="index, follow">
-<link rel="canonical" href="https://yourdomain.com/how-small-businesses-grow-with-online-promotion">
+<link rel="canonical" href="https://symphonious-lebkuchen-6ea69f.netlify.app/">
+    <meta name="google-site-verification" content="SLXPRRz7oXfqUHemby8o_LfwqtLqm6sPmHROFklpOIM" />
 
 <style>
     body {
@@ -306,3 +307,4 @@ window.onscroll = function() {
 
 </body>
 </html>
+
